--- a/NEXT/Assignments/Session7/todoproject/todoapp/templates/detail.html
+++ b/NEXT/Assignments/Session7/todoproject/todoapp/templates/detail.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'detail.css' %}">
-    <title>Document</title>
-</head>
-<body>
-    <div class= "wrapper">
-        <div>
-            <h2>할 일</h2>
-            <p>{{ post.title }}</p>
-        </div>
+{% extends 'base.html' %}
+{% block css %} {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'detail.css' %}">
+{% endblock %}
 
-        <div>
-            <h2>내용</h2>
-            <p>{{ post.content }}</p>
-        </div>
+{% block wrapper %}
+<div>
+    <h2>할 일</h2>
+    <p>{{ post.title }}</p>
+</div>
 
-        <div>
-            <h2>마감 기한</h2>
-            <p>{{ post.due }}</p>
-        </div>
-        <a href="{% url 'home' %}">홈으로</a>
-        <a href="{% url 'edit' post.pk %}">수정하기</a>
-        <a href="{% url 'delete' post.pk %}">삭제하기</a>
-    </div>
-</body>
-</html>
+<div>
+    <h2>내용</h2>
+    <p>{{ post.content }}</p>
+</div>
+
+<div>
+    <h2>마감 기한</h2>
+    <p>{{ post.due }}</p>
+</div>
+<a href="{% url 'home' %}">홈으로</a>
+<a href="{% url 'edit' post.pk %}">수정하기</a>
+<a href="{% url 'delete' post.pk %}">삭제하기</a>
+
+<form method="POST">
+    {% csrf_token %}
+    <input type="text" name="content" placeholder="댓글을 입력해주세요">
+    <button type="submit">댓글 쓰기</button>
+</form>
+
+{% for comment in post.comments.all %}
+<li>{{ comment.content }}
+    <a href="{% url 'delete_comment' post.pk comment.pk %}">삭제</a>
+</li>
+{% endfor %}
+{% endblock %}
