--- a/NEXT/Assignments/Session7/todoproject/todoapp/static/detail.css
+++ b/NEXT/Assignments/Session7/todoproject/todoapp/static/detail.css
@@ -20,3 +20,23 @@ a:visited {
     color:bisque;
 }
 
+
+
+.wrapper > form > input {
+    box-sizing: border-box;
+    height: 50px;
+    width: 200px;
+    border-radius: 10px;
+    background-color: hsla(0, 0%, 100%, 0.9);
+    margin-top: 100px;
+}
+
+.wrapper > form > button {
+    height: 50px;
+    border-radius: 10px;
+    background-color: hsla(0, 0%, 100%, 0.9);
+}
+
+.wrapper > li {
+    margin: 20px;
+}
