--- a/NEXT/Assignments/Session7/todoproject/todoapp/templates/edit.html
+++ b/NEXT/Assignments/Session7/todoproject/todoapp/templates/edit.html
@@ -1,36 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'edit.css' %}">
-    <title>Document</title>
-</head>
-<body>
-    <div class="wrapper">
-        <p>할 일 수정하기</p>
-        <form action="" method="post">
-            {% csrf_token %} 
-            <div>
-                <label for="title">할 일: </label>
-                <input type="text" id="title" name="title" value="{{ post.title }}">
-            </div>
+{% extends 'base.html'%} 
+{% block css %} {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'edit.css' %}">
+{% endblock %}
 
-            <div>
-                <label for="content">내용</label>
-                <textarea name="content" id="content" cols="30" rows="10" >{{ post.content }}</textarea>
-            </div>
-
-            <div>
-                <label for="due">마감기한</label>
-                <input type="datetime-local" id="due" name="due" value="{{ post.due }}">
-            </div>
-
-            <button type="submit">수정하기</button>
-        </form>
+{% block wrapper%}
+<p>할 일 수정하기</p>
+<form action="" method="post">
+    {% csrf_token %}
+    <div>
+        <label for="title">할 일: </label>
+        <input type="text" id="title" name="title" value="{{ post.title }}">
     </div>
-    </body>
 
-</html>
+    <div>
+        <label for="content">내용</label>
+        <textarea name="content" id="content" cols="30" rows="10">{{ post.content }}</textarea>
+    </div>
+
+    <div>
+        <label for="due">마감기한</label>
+        <input type="datetime-local" id="due" name="due" value="{{ post.due }}">
+    </div>
+
+    <button type="submit">수정하기</button>
+</form>
+{% endblock %}
