--- a/NEXT/Assignments/Session7/todoproject/todoapp/templates/home.html
+++ b/NEXT/Assignments/Session7/todoproject/todoapp/templates/home.html
@@ -1,31 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'home.css' %}">
-    <title>todoHome</title>
-</head>
+{% extends 'base.html' %}
+{% block css %} {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'home.css' %}">
+{% endblock %}
 
-<body>
-    <div class= "wrapper">
-        <div class= "title">
-            <h1>    TO DO LIST</h1>
-        </div>
-        <div class= "list">
-                <ul>
-                    {% for post in posts %} 
-                    <li>
-                        <a href="{% url 'detail' post.pk %}">{{ post.title }}</a>
-                        <p>마감 기한 : {{ post.due }}</p>
-                    </li>
-                    {% endfor %} 
-                </ul>
-        </div>
-        <a href="{% url 'new' %}">할 일 쓰러가기</a>
+{% block wrapper %}
+<div class="title">
+    <h1> TO DO LIST</h1>
+</div>
+<div class="list">
+    <ul>
+        {% for post in posts %}
+        <li>
+            <a href="{% url 'detail' post.pk %}">{{ post.title }}</a>
+            <p>마감 기한 : {{ post.due }}</p>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+<a href="{% url 'new' %}">할 일 쓰러가기</a>
 
-    </div>
-</body>
-</html>
+{% endblock %}
